# Agentic-RAG-AI

./: README.md  WSO2WebsiteURL.md  YouTubeURL.md
HTML/: home-backend.html  home.html  index.html
ask-wiz-79/: README.md  google-auth-example.html  index.html
ask-wiz-79/src/: index.css
ask-wiz-79/src/components/: ChatInterface.tsx
ask-wiz-79/src/config/: auth.ts
ask-wiz-79/src/contexts/: AuthContext.tsx
ask-wiz-79/src/pages/: Index.tsx
notebooks/: Test_Agentic_RAG_with_LlamaIndex.ipynb  Test_RAG_with_LlamaIndex.ipynb  video_transcriber.ipynb
rag/: Dockerfile  main.py  open-api-v1-spec.yaml  pyproject.toml  requirements.txt
rag/config/: config.py
rag/database/: db.py
rag/src/: test.py
rag/src/agent/: agent.py
rag/src/agent/tools/: get_similar_text_chunk.py
rag_data_pipeline/: .env.example  README.md  git.py  main.py  pyproject.toml  requirements.txt
rag_data_pipeline/config/: config.py  settings.py
rag_data_pipeline/database/: db.py
rag_data_pipeline/database/utils/: db_utils.py
rag_data_pipeline/db_scripts/: db_create.sql
rag_data_pipeline/src/chunkers/: chunkers.py
rag_data_pipeline/src/drive_reader/: drive_reader.py
rag_data_pipeline/src/embeddings/: openai_embeddings.py
rag_data_pipeline/src/scraper/: web_scraper.py
rag_data_pipeline/src/youtube_transcripts/: youtube_transcript_to_md.py
rag_test_frontend/: index.html  package-lock.json  package.json
rag_test_frontend/src/components/: ChatInterface.tsx  LoginPage.tsx
rag_test_frontend/src/types/: google.d.ts
