[project]
name = "rag-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudscraper>=1.2.71",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.181.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "llama-hub>=0.0.79.post1",
    "llama-index>=0.13.6",
    "llama-index-core>=0.13.6",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-vector-stores-postgres>=0.6.6",
    "llama-index-readers-google>=0.2.0",
    "numpy>=2.3.2",
    "sqlalchemy>=2.0.43",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "youtube-transcript-api>=1.2.2",
    "pypandoc>=1.15",
    "pdfplumber>=0.11.7",
    "markdownify>=1.2.0",
]
